# rust-pathtracer

./: Cargo.toml  Readme.md
renderer/: Cargo.toml
renderer/src/: analytical.rs  main.rs
rust-pathtracer/: Cargo.toml  Readme.md
rust-pathtracer/src/: buffer.rs  fx.rs  globals.rs  lib.rs  light.rs  material.rs  math.rs  ray.rs  scene.rs  tracer.rs
rust-pathtracer/src/camera/: mod.rs  pinhole.rs
