[package]
name = "rust-pathtracer"
version = "0.1.0"
edition = "2021"
description = "A principled BSDF pathtracer with an abstracted backend. Perfect for rendering procedural content."
license = "MIT"
keywords = ["pathtracer", "graphics", "principled", "BSDF", "raytracing"]
repository = "https://github.com/markusmoenig/rust-pathtracer.git"

[dependencies]
nalgebra = "0.31.0"
nalgebra-glm = "0.17.0"
rayon = "1.5.3"
rand = "0.8.5"
